修改模板文件，导致的空白行

--- a/packages/tohtml/src/assets/template/base.template.html
+++ b/packages/tohtml/src/assets/template/base.template.html
@@ -22,7 +22,6 @@
     </head>
     <body>
         <% _.each(items, function(items) { %>
-        <p><%- items %></p>
-        <% }); %>
+        <p><%- items %></p><% }); %>
     </body>
 </html>
